@@ -1194,3 +1194,932 @@ Kafka 中提供的日志清理策略有 delete 和 compact 两种。
 
    
 
+# P41 消费者_消费方式
+
+第5章 Kafka 消费者
+
+## 5.1 Kafka 消费方式
+
+- pull（拉）模式：
+
+  consumer 采用从 broker 中主动拉取数据。
+
+  Kakfa 采用这种方式。
+
+- push（推）模式
+
+  Kafka 没有采用这种方式，因为由 broker 决定消息发送速率，很难适应所有消费者的消费速率。例如推送的速度是 50m/s，Consumer1、Consumer2 就来不及处理消息。
+
+pull 模式不足之处是，如果 Kafka 没有数据，消费者可能会陷入循环中，一直返回空数据
+
+# P42 消费者_消费者总体工作流程
+
+## 5.2 Kafka 消费者工作流程
+
+### 5.2.1 消费者总体工作流程
+
+每个分区的数据只能由消费者组中的一个消费者消费
+
+一个消费者可以消费多个分区数据
+
+每个消费者的 offset 由消费者提交到系统主题保存
+
+# P43 消费者_消费者组工作原理
+
+### 5.2.2 消费者组原理
+
+Consumer Group(CG)：消费者组，由多个 consumer 组成。形成一个消费者组的条件，是所有消费者的 groupid 相同。
+
+- 消费者组内每个消费者负责消费不同分区的数据，一个分区只能由一个组内消费者消费。
+- 消费者组之间互不影响。所有的消费者都属于某个消费者组，即消费者组是逻辑上的一个订阅者。
+- 如果向消费者组中添加更多的消费者，超过主题分区数量，则有一部分消费者就会闲置，不会接收任何消息
+
+# P44 消费者_消费者组初始化
+
+1、coordinator: 辅助实现消费者组的初始化和分区的分配。
+
+coordinator 节点选择 = groupid 的 hashcode 值 % 50 （__consumer_offsets 的分区数量）
+
+例如：groupid 的 hashcode 值 = 1，1 % 50 = 1，那么 __consumer_offsets 主题的 1 号分区，在哪个 broker 上，就选择这个节点的 coordinator 作为这个消费者组的老大。消费者组下的所有的消费者提交 offset 的时候就往这个分区去提交 offset。
+
+1. 每个 consumer 都发送 JoinGroup 请求
+2. 选出一个 consumer 作为 leader
+3. 把要消费的 topic 情况发送给 leader 消费者
+4. leader 会负责制定消费方案
+5. 把消费方案发给 coordinator
+6. Coordinator 就把消费方案下发给各个 consumer
+7. 每个消费者就会和 coordinator 保持心跳（默认 3s），一旦超时 （session.timeout.ms=45s），该消费者会被移除，并触发再平衡；或者消费者处理消息的时间过长（max.poll.interval.ms 5 分钟），也会触发再平衡
+
+# P45 消费者_消费者组详细消费流程
+
+group consumer
+
+↓ sendFetches 发送消费请求
+
+ConsumerNetworkClient
+
+- fetch.min.bytes 每批次最小抓取大小，默认1字节
+- fetch.max.wait.ms 一批数据最小值未达到的超时时间，默认 500ms
+- fetch.max.bytes 每批次最大抓取大小，默认 50m
+
+↓ send
+
+Kafka cluster（broker topic partition）
+
+↓ onSuccess
+
+completedFetches (queue) → parseRecord（反序列化） → Interceptors（拦截器） → 处理数据
+
+- max.poll.records 一次拉取数据返回消息的最大条数，默认 500 条
+
+↑ FetchedRecords 从队列中抓取数据
+
+group consumer
+
+### 5.2.3 消费者重要参数
+
+| 参数名称                                    | 描述                                                         |
+| ------------------------------------------- | ------------------------------------------------------------ |
+| bootstrap.servers                           | 向 Kafka 集群建立初始连接用到的 host/port 列表               |
+| key.deserializer<br />和 value.deserializer | 指定接收消息的 key 和 value 的反序列化类型。一定要写全类名。 |
+
+
+
+# P46 消费者_消费一个主题
+
+## 5.3 消费者 API
+
+### 5.3.1 独立消费者案例（订阅主题）
+
+1. 需求：
+
+   创建一个独立消费者，消费 first 主题中的数据。
+
+   **注意：在消费者 API 代码中必须配置消费者组 id。命令行启动消费者不填写消费者组 id 会被自动填写随机的消费者组 id**
+
+2. 实现步骤
+
+   1. 创建包名  com.atguigu.kafka.consumer
+
+   2. 编写代码
+
+      ```java
+      public class CustomConsumer {
+          public static void main(String[] args) {
+              // 0 配置
+              Properties properties = new Properties();
+              // 连接 bootstrap.servers
+              properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "hadoop102:9092,hadoop103:9092");
+              // 反序列化
+              properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+              properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+              // 配置消费者组 id
+              properties.put(ConsumerConfig.GROUP_ID_CONFIG, "test");
+              // 1 创建一个消费者 "", "hello"
+              KafkaConsumer<String, String> kafkaConsumer = new KafkaConsumer<>(properties);
+              // 2 订阅主题 first
+              ArrayList<String> topics = new ArrayList<>();
+              topics.add("first");
+              kafkaConsumer.subscribe(topics);
+              // 3 消费数据
+              while (true) {
+                  ConsumerRecords<String, String> consumerRecords = kafkaConsumer.poll(Duration.ofSeconds(1));
+                  for (ConsumerRecord<String, String> consumerRecord : consumerRecords) {
+                      System.out.println(consumerRecord);
+                  }
+              }
+          }
+      }
+      ```
+
+      
+
+# P47 消费者_消费一个分区
+
+### 5.3.2 独立消费者案例（订阅分区）
+
+1. 需求：创建一个独立消费者，消费 first 主题 0 号分区的数据
+
+2. 实现步骤
+
+   1. 代码编写
+
+      ```java
+      public class CustomConsumerPartition {
+          public static void main(String[] args) {
+              // 0 配置
+              Properties properties = new Properties();
+              // 连接 bootstrap.servers
+              properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "hadoop102:9092,hadoop103:9092");
+              // 反序列化
+              properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+              properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+              // 配置消费者组 id
+              properties.put(ConsumerConfig.GROUP_ID_CONFIG, "test");
+              // 1 创建一个消费者 "", "hello"
+              KafkaConsumer<String, String> kafkaConsumer = new KafkaConsumer<>(properties);
+              // 2 订阅主题对应的分区
+              ArrayList<TopicPartition> topicPartitions = new ArrayList<>();
+              topicPartitions.add(new TopicPartition("first", 0));
+              kafkaConsumer.assign(topicPartitions);
+              // 3 消费数据
+              while (true) {
+                  ConsumerRecords<String, String> consumerRecords = kafkaConsumer.poll(Duration.ofSeconds(1));
+                  for (ConsumerRecord<String, String> consumerRecord : consumerRecords) {
+                      System.out.println(consumerRecord);
+                  }
+              }
+          }
+      }
+      ```
+
+      
+
+# P48 消费者_消费者组案例
+
+### 5.3.3 消费者组案例
+
+1. 需求：测试同一个主题的分区数据，只能由一个消费者组中的一个消费。
+2. 案例实操
+   1. 复制一份基础消费者的代码，在 IDEA 中同时启动，即可启动同一个消费者组中的两个消费者。
+
+# P49 消费者_Range 分配
+
+## 5.4 生产经验——分区的分配以及再平衡
+
+1. 一个 consumer group 中有多个 consumer 组成，一个 topic 有多个 partition 组成，现在的问题是，**到底由哪个 consumer 来消费哪个 partition 的数据**。
+
+2. Kafka 有四种主流的分区分配策略：**Range、RoundRobin、Sticky、CooperativeSticky**。
+
+   可以通过配置参数 **partition.assignment.strategy**，修改分区的分配策略。默认策略是 Range + CooperativeSticky。Kafka 可以同时使用多个分区分配策略。
+
+
+
+1. 每个 consumer 都发送 JoinGroup 请求
+2. 选出一个 consumer 作为 leader
+3. 把要消费的 topic 情况发送给 leader 消费者
+4. leader 会负责制定消费方案
+5. 把消费方案发给 coordinator
+6. Coordinator 就把消费方案下发给各个 consumer
+7. 每个消费者就会和 coordinator 保持心跳（默认 3s），一旦超时 （session.timeout.ms=45s），该消费者会被移除，并触发再平衡；或者消费者处理消息的时间过长（max.poll.interval.ms 5 分钟），也会触发再平衡
+
+| 参数名称                      | 描述                                                         |
+| ----------------------------- | ------------------------------------------------------------ |
+| heartbeat.interval.ms         | Kafka 消费者和 coordinator 之间的心跳时间，**默认 3s**。<br />该条目的值必须小于 session.timeout.ms，也不应该高于 session.timeout.ms 的 1/3. |
+| session.timeout.ms            | Kafka 消费者和 coordinator 之间连接超时时间，**默认 45s**。超过该值，该消费者被移除，消费者组执行再平衡。 |
+| max.poll.interval.ms          | 消费者处理消息的最大时长，**默认是 5 分钟**。超过该值，该消费者被移除，消费者组执行再平衡。 |
+| partition.assignment.strategy | 消费者分区分配策略，默认策略是 Range + CooperativeSticky。Kafka 可以同时使用多个分区分配策略。可以选择的策略包括：Range、RoundRobin、Sticky、CooperativeSticky |
+
+### 5.4.1 Range 以及再平衡
+
+1）Range 分区策略原理
+
+Range 是对每个 topic 而言的。
+
+首先对同一个 topic 里面的**分区按照序号进行排序**，并对**消费者按照字母顺序进行排序**。
+
+假如现在有 7 个分区，3 个消费者，排序后的分区将会是 0, 1, 2, 3, 4, 5, 6；消费者排序完之后将会是  C0, C1, C2。
+
+通过 **partition 数/ consumer 数**来决定每个消费者应该消费几个分区。**如果除不尽，那么前面几个消费者将会多消费 1 个分区。**
+
+例如，7/3 = 2 余 1，除不尽，那么消费者 C0 便会多消费 1 个分区。8/3 = 2 余 2，除不尽，那么 C0 和 C1 分别多消费一个。
+
+**注意：**如果只是针对 1 个 topic 而言，C0 消费者多消费 1 个分区影响不是很大。但是如果有 N 多个 topic，那么针对每个 topic，消费者 C0 都将多消费 1 个分区，topic 越多，C0 消费的分区会比其他消费者明显多消费 N 个分区。
+
+**容易产生数据倾斜！**
+
+2）Range 分区分配策略案例
+
+1. 修改主题 first 为 7 个分区
+
+   ```shell
+   bin/kafka-topics.sh  --bootstrap-server hadoop102:9092 --alter --topic first --partitions 7
+   ```
+
+   **注意：分区数可以增加，但是不能减少。**
+
+2. 复制 CustomConsumer 类，创建 CustomConsumer2。这样可以由三个消费者 CustomConsumer、CustomConsumer1、CustomConsumer2 组成消费者组，组名都为 “test”，同时启动 3 个消费者。
+
+3. 启动 CustomProducer 生产者，发送 500 条消息，随机发送到不同的分区。
+
+# P50 消费者_Roundrobin
+
+### 5.4.2 RoundRobin 以及再平衡
+
+1）RoundRobin 分区策略原理
+
+RoundRobin 针对集群中**所有 Topic 而言**。
+
+RoundRobin 轮询分区策略，是把**所有的 partition 和所有的 consumer 都列出来**，然后**按照 hashcode 进行排序**，最后通过**轮询算法**来分配 partition 给到各个消费者。
+
+2）RoundRobin 分区分配策略案例
+
+1. 依次在 CustomConsumer、CustomConsumer1、CustomConsumer2 三个消费者代码中修改分区分配策略为 RoundRobin。
+
+   ```java
+   // 修改分区分配策略
+   properties.put(ConsumerConfig.PARTITION_ASSIGNMENT_STRATEGY_CONFIG, "org.apache.kafka.clients.consumer.RoundRobinAssignor");
+   ```
+
+2. 重启 3 个消费者，重复发送消息的步骤，观看分区结果。
+
+# P51 消费者_Sticky
+
+### 5.4.3 Sticky 以及再平衡
+
+**粘性分区定义：**可以理解为分配的结果带有“粘性的”。即在执行一次新的分配之前，考虑上一次分配的结果，尽量少的调整分配的变动，可以节省大量的开销。
+
+粘性分区是 Kafka 从 0.11.x 版本开始引入这种分配策略，**首先会尽量均衡的放置分区到消费者上面**，在出现同一消费组内消费者出现问题的时候，会**尽量保持原有分配的分区不变化。**
+
+1. 需求
+
+   设置主题为 first，7 个分区；准备 3 个消费者，采用粘性分区策略，并进行消费，观察消费分配情况。然后再停止其中一个消费者，再次观察消费分配情况。
+
+2. 步骤
+
+   1. 修改分区分配策略为粘性。
+
+      **注意：3 个消费者都应该注释掉，之后重启 3 个消费者，如果出现报错，全部停止等会再重启，或者修改为全新的消费者组。**
+
+      ```java
+      // 修改分区分配策略
+      ArrayList<String> strategys = new ArrayList<>();
+      strategys.add("org.apache.kafka.clients.consumer.StickyAssignor");
+      properties.put(ConsumerConfig.PARTITION_ASSIGNMENT_STRATEGY_CONFIG, strategys);
+      ```
+
+   2. 使用同样的生产者发送 500 条消息。
+
+      可以看到会尽量保持分区的个数近似划分分区。
+
+# P52 消费者_offset 保存位置
+
+## 5.5 offset 位移
+
+### 5.5.1 offset 的默认维护位置
+
+Kafka 0.9 版本之前，consumer 默认将 offset 保存在 Zookeeper 中
+
+从 0.9 版本开始，consumer 默认将 offset 保存在 Kafka 一个内置的 topic 中，该 topic 为 __consumer_offsets
+
+__consumer_offsets 主题里面采用 key 和 value 的方式存储数据。key 是 group.id + topic + 分区号，value 就是当前 offset 的值。每隔一段时间，kafka 内部会对这个 topic 进行 compact，也就是每个 group.id + topic + 分区号就保留最新数据。
+
+1）消费 offset 案例
+
+1. 思想：__consumer_offsets 为 Kafka 中的 topic，那就可以通过消费者进行消费。
+
+2. 在配置文件 config/**consumer.properties** 中添加配置 **exclude.internal.topics=false**, **默认是 true，表示不能消费系统主题。为了查看该系统主题数据，所以该参数修改为 false**。
+
+3. 采用命令行方式，创建一个新的 topic。
+
+   ```shell
+   bin/kafka-topics.sh --bootstrap-server hadoop102:9092 --create --topic atguigu --partitions 2 --replication-factor 2
+   ```
+
+4. 启动生产者往 atguigu 生产数据。
+
+   ```shell
+   bin/kafka-console-producer.sh --topic atguigu --bootstrap-server hadoop102:9092
+   ```
+
+5. 启动消费者消费 atguigu 数据
+
+   ```shell
+   bin/kafka-console-consumer.sh --topic __consumer_offsets --bootstrap-server hadoop102:9092 --consumer.config config/consumer.properties --formatter "kafka.coordinator.group.GroupMetadataManager\$OffsetsMessageFormatter" --from-beginning
+   ```
+
+   
+
+# P53 消费者_自动 offset
+
+### 5.5.2 自动提交 offset
+
+为了使我们能够专注于自己的业务逻辑，Kafka 提供了自动提交 offset 的功能。
+
+自动提交 offset 的相关参数：
+
+- **enable.auto.commit**: 是否开启自动提交 offset 功能，默认是 true
+- **auto.commit.interval.ms**: 自动提交 offset 的时间间隔，默认是 5s
+
+
+
+1. 不断拉取数据
+2. Consumer 每 5s 提交 offset
+
+| 参数名称                | 描述                                                        |
+| ----------------------- | ----------------------------------------------------------- |
+| enable.auto.commit      | **默认值为 true**，消费者会自动周期性地向服务器提交偏移量。 |
+| auto.commit.interval.ms | 如果设置了 enable.auto.commit 的值为 true，则该值定义了消费 |
+
+# P54 消费者_手动 offset
+
+### 5.5.3 手动提交 offset
+
+虽然自动提交 offset 十分简单便利，但由于其是基于时间提交的，开发人员难以把握 offset 提交的时机。因此 Kafka 还提供了手动提交 offset 的 API。
+
+手动提交 offset 的方法有两种：分别是 **commitSync（同步提交）**和 **commitAsync（异步提交）**。两者的相同点是，都会将**本次提交的一批数据最高的偏移量提交**；不同点是，**同步提交阻塞当前线程**，一直到提交成功，并且会自动失败重试（由不可控因素导致，也会出现提交失败）；而**异步提交则没有失败重试机制，故有可能提交失败。**
+
+- **commitSync（同步提交）：必须等待 offset 提交完毕，再去消费下一批数据。**
+- **commitAsync（异步提交）：发送完提交 offset 请求后，就开始消费下一批数据了。**
+
+1）同步提交 offset
+
+由于同步提交  offset 有失败重试机制，故更加可靠，但是由于一直等待提交结果，提交的效率比较低。以下为同步提交 offset 的示例。
+
+```java
+public class CustomConsumerByHandSync {
+    public static void main(String[] args) {
+        // ...
+        
+        // 手动提交
+        properties.put(ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, false);
+        
+        // ...
+        
+        // 3 消费数据
+        while (true) {
+            ConsumerRecords<String, String> consumerRecords = kafkaConsumer.poll(Duration.ofSeconds(1));
+            for (ConsumerRecord<String, String> consumerRecord : consumerRecords) {
+                System.out.println(consumerRecord);
+            }
+            // 手动提交 offset
+            // kafkaConsumer.commitSync();
+            kafkaConsumer.commitAsync();
+        }
+    }
+}
+```
+
+# P55 消费者_指定 offset
+
+### 5.5.4 指定 Offset 消费
+
+**auto.offset.reset = earliest | latest | none** 默认是 latest。
+
+当 Kafka 中没有初始偏移量（消费者组第一次消费）或服务器上不再存在当前偏移量时（例如该数据已被删除），该怎么办？
+
+1. **earliest**：自动将偏移量重置为最早的偏移量，**--from-beginning**。
+
+2. **latest（默认值）**：自动将偏移量重置为最新偏移量。
+
+3. none：如果未找到消费者组的先前偏移量，则向消费者抛出异常。
+
+4. 任意指定 offset 位移开始消费
+
+   ```java
+   public class CustomConsumerSeek {
+       public static void main(String[] args) {
+           // 0 配置信息
+           Properties properties = new Properties();
+           
+           // 连接
+           properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "hadoop102:9092,hadoop103:9092");
+           
+           // 反序列化
+           properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+           properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+           
+           // 组 id
+           properties.put(ConsumerConfig.GROUP_ID_CONFIG, "test2");
+           
+           // 1 创建消费者
+           KafkaConsumer<String, String> kafkaConsumer = new KafkaConsumer<>(properties);
+           
+           // 2 订阅主题
+           ArrayList<String> topics = new ArrayList<>();
+           topics.add("first");
+           kafkaConsumer.subscribe(topics);
+           
+           // 指定位置进行消费
+           Set<TopicPartition> assignment = kafkaConsumer.assignment();
+           
+           // 保证分区分配方案已经制定完毕
+           while (assignment.size() == 0) {
+               kafkaConsumer.poll(Duration.ofSeconds(1));
+               assignment = kafkaConsumer.assignment();
+           }
+           
+           // 指定消费的 offset
+           for (TopicPartition topicPartition: assignment) {
+               kafkaConsumer.seek(topicPartition, 100);
+           }
+           
+           // 3 消费数据
+           while (true) {
+               ConsumerRecords<String, String> consumerRecords = kafkaConsumer.poll(Duration.ofSeconds(1));
+               for (ConsumerRecord<String, String> consumerRecord : consumerRecords) {
+                   System.out.println(consumerRecord);
+               }
+           }
+       }
+   }
+   ```
+
+# P56 消费者_按照时间消费
+
+### 5.5.5 指定时间消费
+
+需求：在生产环境中，会遇到最近消费的几个小时数据异常，想重新按照时间消费。例如要求按照时间消费前一天的数据，怎么处理？
+
+操作步骤：
+
+```java
+// ...
+
+// 保证分区分配方案已经制定完毕
+while (assignment.size() == 0) {
+    kafkaConsumer.poll(Duration.ofSeconds(1));
+    assignment = kafkaConsumer.assignment();
+}
+
+// 希望把时间转换为对应的 offset
+HashMap<TopicPartition, Long> topicPartitionLongHashMap = new HashMap<>();
+// 封装对应集合
+for (TopicPartition topicPartition: assignment) {
+    topicPartitionLongHashMap.put(topicPartition, System.currentTimeMillis() - 1 * 24 * 3600 * 1000);
+}
+Map<TopicPartition, OffsetAndTimestamp> topicPartitionOffsetAndTimestampMap = kafkaConsumer.offsetsForTimes(topicPartitionLongHashMap);
+
+// 指定消费的 offset
+for (TopicPartition topicPartition: assignment) {
+    OffsetAndTimestamp offsetAndTimestamp = topicPartitionOffsetAndTimestampMap.get(topicPartition);
+    kafkaConsumer.seek(topicPartition, offsetAndTimestamp.offset());
+}
+
+// ...
+```
+
+# P57 消费者_消费者事务
+
+### 5.5.6 漏消费和重复消费
+
+**重复消费**：已经消费了数据，但是 offset 没提交。
+
+**漏消费**：先提交 offset 后消费，有可能会造成数据的漏消费。
+
+
+
+场景1：**重复消费**。自动提交 offset 引起。
+
+1. Consumer 每 5s 提交 offset
+2. 如果提交 offset 后的 2s，consumer 挂了
+3. 再次重启 consumer，则从上一次提交的 offset 处继续消费，导致重复消费
+
+场景2：**漏消费**。设置 offset 为手动提交，当 offset 被提交时，数据还在内存中未落盘，此时刚好消费者线程被 kill 掉，那么 offset 已经提交，但是数据未处理，导致这部分内存中的数据丢失。
+
+1. 提交 offset
+2. 消费者消费的数据还在内存中，消费者挂掉，导致漏消费
+
+
+
+如果想完成 Consumer 端的精准一次性消费，那么需要 **Kafka 消费端将消费过程和提交 offset 过程做原子绑定**。此时我们需要将 Kafka 的 offset 保存到支持事务的自定义介质（比如 MySQL）。这部分知识会在后续项目部分涉及。
+
+# P58 消费者_数据积压
+
+## 5.7 生产经验——数据积压（消费者如何提高吞吐量）
+
+1. 如果是 Kafka 消费能力不足，则可以考虑**增加 Topic 的分区数**，并且同时提升消费组的消费者数量，**消费者数 = 分区数**。（两者缺一不可）
+2. 如果是下游的数据处理不及时：**提高每批次拉取的数量。**批次拉取数据过少（拉取数据/处理时间 < 生产速度），使处理的数据小于生产的数据，也会造成数据积压。
+
+# P59 每日回顾（上）
+
+## 四、broker
+
+1. zk 存储了哪些信息
+
+   1. broker.ids
+   2. leader
+   3. 辅助选举 controller
+
+2. 工作流程
+
+3. 服役
+
+   1. 准备一台干净服务器 hadoop100
+   2. 对哪个主题操作
+   3. 形成计划
+   4. 执行计划
+   5. 验证计划
+
+4. 退役
+
+   1. 要退役的节点不让存储数据
+   2. 退出节点
+
+5. 副本
+
+   1. 副本的好处 提高可靠性
+   2. 生产环境中通常2个 默认1个
+   3. 有 leader follower leader
+   4. isr
+   5. controller：第一次 随机 轮询
+   6. leader 挂了
+   7. follower 挂了
+   8. 副本分配 默认
+   9. 手动副本分配 指定计划 执行计划 验证计划
+   10. leader partition的负载均衡 10%
+   11. 手动增加副本因子
+
+6. 存储机制
+
+   broker topic partition log segment 1g 稀疏索引 4kb
+
+7. 删除数据
+
+   默认7天 3天 7小时
+
+   两种 删除 压缩
+
+8. 高效读写
+
+   1. 集群 采用分区
+   2. 稀疏索引
+   3. 顺序读写
+   4. 零拷贝和页缓存
+
+# P60 每日回顾（下）
+
+## 五、消费者
+
+1. 总体流程
+
+2. 消费者组
+
+3. 按照主题消费
+
+   1. 配置信息
+
+      连接
+
+      反序列化
+
+      组 id
+
+   2. 创建消费者
+
+   3. 订阅主题
+
+   4. 消费数据
+
+4. 按照分区
+
+5. 消费者组案例
+
+   组 id
+
+6. 分区分配策略 再平衡
+
+   7个分区 3个消费者
+
+   - range
+
+     0 1 2 x
+
+     3 4
+
+     5 6
+
+   - roundrobin 轮询
+
+     0 3 6
+
+     1 4
+
+     2 5
+
+   - 粘性 2 2 3
+
+     0 3 4
+
+     2 6
+
+     1 5
+
+7. offset
+
+   1. 默认存储在系统主题
+   2. 自动提交 5s 默认
+   3. 手动提交 同步 异步
+   4. 指定 offset 消费 seek()
+   5. 按照时间消费
+   6. 漏消费 重复消费
+
+8. 事务
+
+   生产端 =》 集群
+
+   集群 =》 消费者
+
+   消费者 =》 框架
+
+9. 数据积压
+
+   1. 增加分区 增加消费者个数
+   2. 生产 =》 集群 4个参数
+   3. 消费端 两个参数 50m 500条
+
+# P61 监控_MySQL环境准备
+
+第6章 Kafka-Eagle 监控
+
+Kafka-Eagle 框架可以监控 Kafka 集群的整体运行情况，在生产环境中经常使用。
+
+## 6.1 MySQL 环境准备
+
+Kafka-Eagle 的安装依赖于 MySQL，MySQL 主要用来存储可视化展示的数据。如果集群中之前安装过 MySQL 可以跨过该步
+
+# P62 监控_Kafka 环境准备
+
+## 6.2 Kafka 环境准备
+
+1. 关闭 Kafka 集群
+
+   ```shell
+   kf.sh stop
+   ```
+
+2. 修改 /opt/module/kafka/bin/kafka-server-start.sh 命令中
+
+   ```shell
+   vim bin/kafka-server-start.sh
+   ```
+
+   修改如下参数值：
+
+   ```shell
+   if [ "x$KAFKA_HEAP_OPTS" = "x" ]; then
+   	export KAFKA_HEAP_OPTS="-Xmx1G -Xms1G"
+   fi
+   ```
+
+   为
+
+   ```shell
+   if [ "x$KAFKA_HEAP_OPTS" = "x" ]; then
+   	export KAFKA_HEAP_OPTS="-server -Xms2G -Xmx2G -XX:PermSize=128m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:ParallelGCThreads=8 -XX:ConcGCThread=5 -XX:InitiatingHeapOccupancyPercent=70"
+   	export JMX_PORT="9999"
+   	#export KAFKA_HEAP_OPTS="-Xmx1G -Xms1G"
+   fi
+   ```
+
+   **注意：修改之后在启动 Kafka 之前要分发之其他节点**
+
+   ```shell
+   xsync kafka-server-start.sh
+   ```
+
+# P63 监控_Kafka-Eagle 安装
+
+## 6.3 Kafka-Eagle 安装
+
+官网：http://www.kafka-eagle.org/
+
+1. 上传压缩包 kafka-eagle-bin-2.0.8.tar.gz 到集群 /opt/software 目录
+
+2. 解压到本地
+
+   ```shell
+   tar -zxvf kafka-eagle-bin-2.0.8.tar.gz
+   ```
+
+3. 进入刚才解压的目录
+
+   ```shell
+   ll
+   ```
+
+4. 将 efak-web-2.0.8-bin.tar.gz 解压至 /opt/module
+
+   ```shell
+   tar -zxvf efak-web-2.0.8-bin.tar.gz -C /opt/module/
+   ```
+
+5. 修改名称
+
+   ```shell
+   mv efak-web-2.0.8/ efak
+   ```
+
+6. 修改配置文件 /opt/module/efak/conf/system-config.properties
+
+   ```shell
+   vim system-config.properties
+   ```
+
+   ```properties
+   efak.zk.cluster.alias=cluster1
+   cluster1.zk.list=hadoop102:2181,hadoop103:2181,hadoop104:2181/kafka
+   # offset 保存在 kafka
+   cluster1.efak.offset.storage=kafka
+   # 配置 mysql 连接
+   efak.driver=com.mysql.jdbc.Driver
+   efak.url=jdbc:mysql://hadoop102:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+   efak.username=root
+   efak.password=000000
+   ```
+
+7. 添加环境变量
+
+   ```shell
+   sudo vim /etc/profile.d/my_env.sh
+   
+   # kafkaEFAK
+   export KE_HOME=/opt/module/efak
+   export PATH=$PATH:$KE_HOME/bin
+   ```
+
+   **注意：source /etc/profile**
+
+   ```shell
+   source /etc/profile
+   ```
+
+8. 启动
+
+   1. **注意：启动之前需要先启动 ZK 以及 KAFKA**
+
+      ```shell
+      kf.sh start
+      ```
+
+   2. 启动 efak
+
+      ```shell
+      bin/ke.sh start
+      ```
+
+       说明：如果停止 efak，执行命令。
+
+      ```shell
+      bin/ke.sh stop
+      ```
+
+      
+
+# P64 监控_Kafka-Eagle 监控页面
+
+# P65 Kraft模式
+
+第7章 Kafka-Kraft 架构
+
+## 7.1 Kafka-Kraft 架构
+
+左图为 Kafka 现有架构，元数据在 zookeeper 中，运行时动态选举  controller，由 controller 进行 Kafka 集群管理。右图为 kraft 模式架构（实验性），不再依赖 zookeeper 集群，而是用三台 controller 节点代替 zookeeper，元数据保存在 controller 中，由 controller 直接进行 Kafka 集群管理。
+
+这样做的好处有以下几个：
+
+- Kafka 不再依赖外部框架，而是能够独立运行；
+- controller 管理集群时，不再需要从 zookeeper 中先读取数据，集群性能上升；
+- 由于不依赖 zookeeper，集群扩展时不再受到 zookeeper 读写能力限制；
+- controller 不再动态选举，而是由配置文件规定。这样我们可以有针对性的加强 controller 节点的配置，而不是像以前一样对随机 controller 节点的高负载束手无策。
+
+## 7.2 Kafka-Kraft 集群部署
+
+1. 再次解压一份 kafka 安装包
+2. 重命名为 kafka2
+3. 在 hadoop102 上修改 /opt/module/kafka2/config/kraft/server.properties 配置文件
+4. 分发 kafka2
+   - 在 hadoop103 和 hadoop104 上需要**对 node.id 相应改变**，值需要和 controller.quorum.voters 对应。
+   - 在 hadoop103 和 hadoop104 上需要根据各自的主机名称，修改相应的 advertised.Listeners 地址。
+5. 初始化集群数据目录
+   1. 首先生成存储目录唯一 ID
+   2. 用该 ID 格式化 kafka 存储目录（三台节点）
+6. 启用 kafka 集群
+7. 停止 kafka 集群
+
+## 7.3 Kafka-Kraft 集群启动停止脚本
+
+1. 在 /home/atguigu/bin 目录下创建文件 kf2.sh 脚本文件
+2. 添加执行权限
+3. 启动集群命令
+
+# P71 集成_SpringBoot生产者
+
+第3章 集成 SpringBoot
+
+SpringBoot 是一个在 JavaEE 开发中非常常用的组件。可以用于 Kafka 的生产者，也可以用于 SpringBoot 的消费者。
+
+1）在 IDEA 中安装 lombok 插件
+
+在 Plugins 下搜索 lombok 然后在线安装即可，安装后注意重启。
+
+2）SpringBoot 环境准备
+
+1. 创建一个 Spring Initializr
+
+   **注意：有时候 SpringBoot 官方脚手架不稳定，我们切换国内地址：https://start.aliyun.com**
+
+2. 项目名称 springboot
+
+3. 添加项目依赖
+
+4. 检查自动生成的配置文件
+
+## 3.1 SpringBoot 生产者
+
+1. 修改 SpringBoot 核心配置文件 application.properties，添加生产者相关信息
+
+   ```properties
+   # 指定 kafka 的地址
+   spring.kafka.bootstrap-servers=hadoop102:9092,hadoop103:9092,hadoop104:9092
+   # 指定 key 和 value 的序列化器
+   spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+   spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+   ```
+
+2. 创建 controller 从浏览器接收数据，并写入指定的 topic
+
+   ```java
+   @RestController
+   public class ProducerController {
+       // Kafka 模板用来向 kafka 发送数据
+       @Autowired
+       KafkaTemplate<String, String> kafka;
+       
+       @RequestMapping("/atguigu")
+       public String data(String msg) {
+           kafka.send("first", msg);
+           return "ok";
+       }
+   }
+   ```
+
+3. 在浏览器中给 /atguigu 接口发送数据
+
+# P72  集成_SpringBoot消费者
+
+## 3.2 SpringBoot 消费者
+
+1. 修改 SpringBoot 核心配置文件 application.properties
+
+   ```properties
+   # ======== 消费者配置开始 ==========
+   # 指定 kafka 的地址
+   spring.kafka.bootstrap-servers=hadoop102:9092,hadoop103:9092,hadoop104:9092
+   # 指定 key 和 value 的反序列化器
+   spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+   spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+   # 指定消费者组的 group_id
+   spring.kafka.consumer.group-id=atguigu
+   # ======== 消费者配置结束 ==========
+   ```
+
+2. 创建类消费 Kafka 中指定 topic 的数据
+
+   ```java
+   @Configuration
+   public class KafkaConsumer {
+       // 指定要监听的 topic
+       @KafkaListener(topics = "first")
+       public void consumeTopic(String msg) { // 参数：收到的 value
+           System.out.println("收到的信息： " + msg);
+       }
+   }
+   ```
+
+3. 向 first 主题发送数据
+
+   ```shell
+   bin/kafka-console-producer.sh --bootstrap-server hadoop102:9092 --topic first
+   ```
+
